syntax = "proto3";

package infraboard.keyauth.application;
option go_package = "github.com/infraboard/keyauth/app/application";

import "app/application/pb/request.proto";

// Application is oauth2's client: https://tools.ietf.org/html/rfc6749#section-2
message Application {
    // 唯一ID
    // @gotags: bson:"_id" json:"id"
    string id = 1;
    // 是否是内建应用
    // @gotags: bson:"build_in" json:"build_in"
    bool build_in =2;
    // 所处于域
    // @gotags: bson:"domain" json:"domain"
    string domain =3;
    // 应用属于那个用户
    // @gotags: bson:"user" json:"create_by"
    string create_by = 4;
    // 应用创建的时间
    // @gotags: bson:"create_at" json:"create_at"
    int64 create_at = 5;
    // 应用更新的时间
    // @gotags: bson:"update_at" json:"update_at"
    int64 update_at = 6;
    // 应用客户端ID
    // @gotags: bson:"client_id" json:"client_id"
    string client_id = 7;
    // 应用客户端秘钥
    // @gotags: bson:"client_secret" json:"client_secret"
    string client_secret =8;
    // 是否冻结应用, 冻结应用后, 该应用无法通过凭证获取访问凭证(token)
    // @gotags: bson:"locked" json:"locked"
    bool locked = 9;
    // 应用名称
    // @gotags: bson:"name" json:"name"
    string name = 10;
     // 应用的网站地址
     // @gotags: bson:"website" json:"website"
    string website = 11;
    // 应用的LOGO
    // @gotags: bson:"logo_image" json:"logo_image"
    string logo_image = 12;
    // 应用简单的描述
    // @gotags: bson:"description" json:"description"
    string description = 13;
    // 应用重定向URI, Oauht2时需要该参数
    // @gotags: bson:"redirect_uri" json:"redirect_uri"
    string redirect_uri = 14;
    // 应用申请的token的过期时间
    // @gotags: bson:"access_token_expire_second" json:"access_token_expire_second"
    int64 access_token_expire_second = 15;
    // 刷新token过期时间
    // @gotags: bson:"refresh_token_expire_second" json:"refresh_token_expire_second"
    int64 refresh_token_expire_second = 16;
    // 客户端类型
    // @gotags: bson:"client_type" json:"client_type"
    ClientType client_type = 17;
}

message Set {
    // @gotags: bson:"total" json:"total"
    int64 total = 1;
    // @gotags: bson:"items" json:"items"
    repeated Application items = 2;
}